--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
   display: block;
 } */
 
+:root {
+  font-family: 'Alkalami', serif;
+  font-family: 'Oswald', sans-serif;
+}
+
 #loading {
   width: 2rem;
   height: 2rem;
